Archive2/40/4eb47f28022962/output
main.cpp: In instantiation of 'struct Graph<Container<int> >':
main.cpp:38:25:   required from here
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp: In function 'int main(int, char**)':
main.cpp:5:20: error: 'using Type_ = int' is private
     using Type_ = T;
                    ^
main.cpp:38:2: error: within this context
  Graph<Container<int> > a;
  ^
main.cpp: In instantiation of 'struct Graph<Container<char, MyAllocator<char> > >':
main.cpp:39:44:   required from here
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:22:44: error: within this context
   typename Container_::Allocator_>::value) &&
                                            ^
main.cpp:33:17: error: 'using Type_ = char' is private
  using Type_ = T;
                 ^
main.cpp:39:2: error: within this context
  Graph<Container<char,MyAllocator<char>> > b;
  ^
main.cpp:38:25: warning: unused variable 'a' [-Wunused-variable]
  Graph<Container<int> > a;
                         ^
main.cpp:39:44: warning: unused variable 'b' [-Wunused-variable]
  Graph<Container<char,MyAllocator<char>> > b;
                                            ^
